force-app/main/default/objects/FA_Document_Details__c/fields/Text10Val__c.field-meta.xml
<CustomField>
    <fullName>Text10Val__c</fullName>
    <label>Text10Val</label>
    <length>255</length>
    <type>Text</type>
</CustomField>