force-app/main/default/objects/FA_Document_Details__c/fields/Text9Val__c.field-meta.xml
<CustomField>
    <fullName>Text9Val__c</fullName>
    <label>Text9Val</label>
    <length>255</length>
    <type>Text</type>
</CustomField>