force-app/main/default/objects/FA_Document_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Document__c</columns>
    <columns>Document_ID__c</columns>
    <columns>Text1Val__c</columns>
    <columns>Text2Val__c</columns>
    <columns>Text3Val__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>